# Kiro-Birthday-Day-4-Challenge

./: .gitignore  README.md  pyproject.toml  requirements.txt
.kiro/specs/calculator-app/: .config.kiro  design.md  requirements.md  tasks.md
calculator/: __init__.py  __main__.py  arithmetic_engine.py  calculator_state.py  gui.py  theme_manager.py
tests/: __init__.py  test_arithmetic_engine.py  test_clear_reset.py  test_decimal_handling.py  test_delete.py  test_delete_result.py  test_digit_entry.py  test_display_rendering.py  test_division_by_zero.py  test_equals_incomplete.py  test_fresh_expression.py  test_gui_smoke.py  test_operator_recording.py  test_operator_replacement.py  test_theme_application.py  test_theme_manager_active.py  test_theme_manager_defaults.py  test_theme_preserves_state.py  test_timing.py
